--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             property="og:description"
             content="에그스쿨 유치원, 우리 아이 첫 영어 어떻게 시작할까요?"
     />
-    <meta property="og:image" content="../../images/home/favicon.ico" />
-    <meta name="twitter:og:image" content="../../images/home/favicon.ico" />
+    <meta property="og:image" content="./images/home/favicon.ico" />
+    <meta name="twitter:og:image" content="./images/home/favicon.ico" />
     <!--S:fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,13 +55,13 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!--E:fonts-->
-    <link rel="stylesheet" href="../../css/common.css">
-    <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/modal.css">
-    <script src="../../js/common.js"></script>
-    <script src="../../js/modal.js"></script>
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/modal.css">
+    <script src="./js/common.js"></script>
+    <script src="./js/modal.js"></script>
     <!--S: index 페이지 js-->
-    <script defer src="../../js/main.js"></script>
+    <script defer src="./js/main.js"></script>
 </head>
 <body>
 <div class="wrapper">
@@ -118,7 +118,7 @@
     </header>
     <!--S:mobile-->
     <header class="m_header">
-        <div class="logo"><a href="/"><img src="../../images/logo.png" alt="Egg School"></a></div>
+        <div class="logo"><a href="/"><img src="./images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
                 <button type="button" onclick="redirectToAppStore()" class="utill_menu">앱 다운로드</button>
@@ -134,8 +134,8 @@
     <div class="m_nav_wrapper">
         <div class="nav_top d_flex align_center">
             <div class="login_block">
-                <img class="logo" src=".../../images/logo.png" alt="Egg School">
-                <p class="login_txt"><a href="../../login" class="font_600">로그인</a>해주세요</p>
+                <img class="logo" src="../images/logo.png" alt="Egg School">
+                <p class="login_txt"><a href="./login" class="font_600">로그인</a>해주세요</p>
             </div>
             <button class="btn_nav open" onclick="handleMobileNav(this)">
                 <span></span>
