--- a/product/element.html
+++ b/product/element.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
-    <link rel="stylesheet" href="./../../css/reset.css">
+    <link rel="stylesheet" href="././../css/reset.css">
     <!--S: Swiper CDN-->
     <link
             rel="stylesheet"
@@ -26,32 +26,32 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://player.vimeo.com/api/player.js"></script>
     <!--E:fonts-->
-    <link rel="stylesheet" href="./../../css/common.css">
+    <link rel="stylesheet" href="././../css/common.css">
     <!--    <link rel="stylesheet" href="/css/main.css">-->
-    <link rel="stylesheet" href="./../../css/modal.css">
-    <link rel="stylesheet" href="./../../css/product.css">
-    <link rel="stylesheet" href="./../../css/guide.css">
-    <script src="./../../js/modal.js"></script>
-    <script src="./../../js/common.js"></script>
-    <script src="./../../js/product.js"></script>
+    <link rel="stylesheet" href="././../css/modal.css">
+    <link rel="stylesheet" href="././../css/product.css">
+    <link rel="stylesheet" href="././../css/guide.css">
+    <script src="././../js/modal.js"></script>
+    <script src="././../js/common.js"></script>
+    <script src="././../js/product.js"></script>
 </head>
 <body>
 <div class="wrapper">
     <!--S:header-->
     <header class="header">
-        <a href="../../"><img src="../../images/logo.png" alt="Egg School"></a>
+        <a href="./../"><img src="./../images/logo.png" alt="Egg School"></a>
         <nav class="gnb_wrapper">
             <ul class="gnb_block">
                 <li class="gnb_link"><span class="gnb_text">Egg School</span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../eggshool/story.html">회사소개</a></li>
-                        <li class="lnb_link"><a href="../../eggshool/system.html">시스템</a></li>
-                        <li class="lnb_link"><a href="../../eggshool/curriculum.html">커리큘럼</a></li>
+                        <li class="lnb_link"><a href="./../eggshool/story.html">회사소개</a></li>
+                        <li class="lnb_link"><a href="./../eggshool/system.html">시스템</a></li>
+                        <li class="lnb_link"><a href="./../eggshool/curriculum.html">커리큘럼</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Product</span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../product/kinder.html">유치원</a></li>
+                        <li class="lnb_link"><a href="./../product/kinder.html">유치원</a></li>
                         <li class="lnb_link"><a href="../../product/element.html">초등</a></li>
                         <li class="lnb_link"><a href="../../product/library.html">도서관</a></li>
                         <li class="lnb_link"><a href="../../product/freetrial/kinder.html">무료체험신청</a></li>
@@ -177,9 +177,9 @@
         </section>
         <section class="product_link_wrapper">
             <ul class="product_link_block">
-                <li class="product_link kinder"><a href="/product/kinder">유치원</a></li>
-                <li class="product_link element active"><a href="/product/element">초등</a></li>
-                <li class="product_link library"><a href="/product/library">도서관</a></li>
+                <li class="product_link kinder"><a href="./kinder.html">유치원</a></li>
+                <li class="product_link element"><a href="./element.html">초등</a></li>
+                <li class="product_link library active"><a href="./library.html">도서관</a></li>
             </ul>
         </section>
         <section class="product_detail_wrapper spacing_product">
