--- a/product/freetrial/kinder.html
+++ b/product/freetrial/kinder.html
@@ -37,7 +37,7 @@
 <div class="wrapper">
     <!--S:header-->
     <header class="header font_black">
-        <a href="/"><img src="../../images/logo.png" alt="Egg School"></a>
+        <a href="/"><img src="./../images/logo.png" alt="Egg School"></a>
         <nav class="gnb_wrapper">
             <ul class="gnb_block">
                 <li class="gnb_link"><span class="gnb_text">Egg School</span>
@@ -88,7 +88,7 @@
     </header>
     <!--S:mobile-->
     <header class="m_header font_black">
-        <div class="logo"><a href="/"><img src="../../images/logo.png" alt="Egg School"></a></div>
+        <div class="logo"><a href="/"><img src="./../images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
                 <button type="button" onclick="redirectToAppStore()" class="utill_menu">앱 다운로드</button>
@@ -104,7 +104,7 @@
     <div class="m_nav_wrapper">
         <div class="nav_top d_flex align_center">
             <div class="login_block">
-                <img class="logo" src="../../images/logo.png" alt="Egg School">
+                <img class="logo" src="./../images/logo.png" alt="Egg School">
                 <p class="login_txt"><a href="/login" class="font_600">로그인</a>해주세요</p>
             </div>
             <button class="btn_nav open" onclick="handleMobileNav(this)">
@@ -172,7 +172,7 @@
                     </p>
                 </div>
                 <div class="char_img_block">
-                    <img src="../../images/product/freetrial/kinder/char_freetrial_kinder.png" alt="">
+                    <img src="./../images/product/freetrial/kinder/char_freetrial_kinder.png" alt="">
                 </div>
             </div>
         </section>
@@ -204,7 +204,7 @@
                                 장난감을 정리하고 집으로 갈 준비를 해요.
                             </p>
                             <div class="thumb_block">
-                                <img src="../../images/product/freetrial/kinder/img_component_prek.png" loading="lazy" alt="">
+                                <img src="./../images/product/freetrial/kinder/img_component_prek.png" loading="lazy" alt="">
                             </div>
                             <p class="dot_desc">
                                 교재 1권, 활동자료 (숨은그림찾기, 그림판)<br />
@@ -223,7 +223,7 @@
                                 냅킨으로 흘린 음식을 스스로 닦을 수 있어요.
                             </p>
                             <div class="thumb_block">
-                                <img src="../../images/product/freetrial/kinder/img_component_k.png" loading="lazy" alt="">
+                                <img src="./../images/product/freetrial/kinder/img_component_k.png" loading="lazy" alt="">
                             </div>
                             <p class="dot_desc">
                                 교재 1권, 활동자료 (에그스쿨 냅킨)<br />
