--- a/product/freetrial/element.html
+++ b/product/freetrial/element.html
@@ -37,7 +37,7 @@
 <div class="wrapper">
     <!--S:header-->
     <header class="header font_black">
-        <a href="/"><img src="../../images/logo.png" alt="Egg School"></a>
+        <a href="/"><img src="./../images/logo.png" alt="Egg School"></a>
         <nav class="gnb_wrapper">
             <ul class="gnb_block">
                 <li class="gnb_link"><span class="gnb_text">Egg School</span>
@@ -88,7 +88,7 @@
     </header>
     <!--S:mobile-->
     <header class="m_header font_black">
-        <div class="logo"><a href="/"><img src="../../images/logo.png" alt="Egg School"></a></div>
+        <div class="logo"><a href="/"><img src="./../images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
                 <button type="button" onclick="redirectToAppStore()" class="utill_menu">앱 다운로드</button>
@@ -104,7 +104,7 @@
     <div class="m_nav_wrapper">
         <div class="nav_top d_flex align_center">
             <div class="login_block">
-                <img class="logo" src="../../images/logo.png" alt="Egg School">
+                <img class="logo" src="./../images/logo.png" alt="Egg School">
                 <p class="login_txt"><a href="/login" class="font_600">로그인</a>해주세요</p>
             </div>
             <button class="btn_nav open" onclick="handleMobileNav(this)">
@@ -172,7 +172,7 @@
                     </p>
                 </div>
                 <div class="char_img_block">
-                    <img src="../../images/product/freetrial/element/char_freetrial_element.png" alt="">
+                    <img src="./../images/product/freetrial/element/char_freetrial_element.png" alt="">
                 </div>
             </div>
         </section>
@@ -204,14 +204,14 @@
                             </p>
                             <ul class="list_block">
                                 <li class="inner_box">
-                                    <img class="img_video" src="../../images/product/freetrial/element/img_component_ani_01.png" loading="lazy" alt="">
+                                    <img class="img_video" src="./../images/product/freetrial/element/img_component_ani_01.png" loading="lazy" alt="">
                                     <p class="dot_desc">
                                         영상 12편 <br />
                                         & 오디오 4곡
                                     </p>
                                 </li>
                                 <li class="inner_box">
-                                    <img class="img_video" src="../../images/product/freetrial/element/img_component_ani_02.png" loading="lazy" alt="">
+                                    <img class="img_video" src="./../images/product/freetrial/element/img_component_ani_02.png" loading="lazy" alt="">
                                     <p class="dot_desc">
                                         디지털콘텐츠<br />
                                         14일 이용권
